049_rot_matrix/grade.txt
Grading at 09/20/2019:21:09:54.979204
For commit ID 906198a593ee4581974b3b6489db1725faa776d6
Grading at Fri Sep 20 17:09:54 EDT 2019
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘readlines’:
rotateMatrix.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
